Fix - Footer spacing and full width issue

--- a/assets/stylesheet/scss/layout/_container.scss
+++ b/assets/stylesheet/scss/layout/_container.scss
@@ -3,5 +3,5 @@
 }
 
 .interior-showcase, .interior-services, .interior-designers, .interior-packages, .interior-contact {
-  margin-top: 75px;
+  margin-top: 80px;
 }
