--- a/assets/stylesheet/scss/layout/_footer.scss
+++ b/assets/stylesheet/scss/layout/_footer.scss
@@ -2,6 +2,7 @@
   padding: 48px 58px;
   text-align: right;
   background-color: #f1f1f1;
+  margin-top: 80px;
 
   a {
     color: #000;
